fix(slides) bad overflow does scrollbars

--- a/_sass/modules/_slides.scss
+++ b/_sass/modules/_slides.scss
@@ -25,6 +25,10 @@
   background-color: $bg;
 }
 
+.backdrop {
+  overflow: hidden;
+}
+
 .slide__info,
 .slide .speakers {
   flex-direction: column;
